[project]
name = "fluid-bridge"
version = "0.2.0"
description = "Unofficial Python bindings for FluidAudio's macOS CLI."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  {name = "David Mease"}
]
keywords = ["audio", "asr", "coreml", "diarization", "fluidaudio", "macos", "tts", "vad"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8.0",
  "ty>=0.0.58",
]

[project.urls]
Homepage = "https://github.com/GoWithitRoger/fluid-bridge"
Issues = "https://github.com/GoWithitRoger/fluid-bridge/issues"
Source = "https://github.com/GoWithitRoger/fluid-bridge"

[project.scripts]
fluid-bridge = "fluid_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fluid_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "live: opt-in checks against a real FluidAudio CLI on macOS",
  "live_inference: opt-in model-backed inference that may download assets",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
